# RanokCAD

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GenerateProjectFiles.bat  GenerateVsProject.bat  README.md  RanokCAD.sln  vcpkg.json
OpenglWrap/: CMakeLists.txt  OpenglWrap.vcxproj  OpenglWrap.vcxproj.filters  packages.config
OpenglWrap/OpenglWrap/: Application.cpp  Application.h  Camera.cpp  Camera.h
OpenglWrap/OpenglWrap/Core/: FrameBuffer.cpp  FrameBuffer.h  LaidVramBuffer.h  Material.cpp  Material.h  RawPtrData.h  RenderApi.cpp  RenderApi.h  RenderTarget.cpp  RenderTarget.h  SceneObject.cpp  SceneObject.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transformable.cpp  Transformable.h  UniformValue.h  VramBufferLayout.cpp  VramHandle.cpp  VramHandle.h
OpenglWrap/OpenglWrap/Platform/: InputManager.cpp  InputManager.h  Window.h
OpenglWrap/Source/Core/: FrameBuffer.cpp  FrameBuffer.h  LaidVramBuffer.cpp  Material.cpp  Material.h  RawPtrData.cpp  RenderApi.cpp  RenderApi.h  SceneObject.cpp  SceneObject.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VramBufferLayout.h  VramHandle.cpp  VramHandle.h
OpenglWrap/Source/Platform/: Window.cpp  Window.h
RanokCAD/: CMakeLists.txt  RanokCAD.cpp  RanokCAD.vcxproj  RanokCAD.vcxproj.filters  imgui.ini  packages.config  resourceRegistry.json
RanokCAD/Assets/Templates/: RayMarch.glsl.templ
RanokCAD/RanokCAD/: RanokCAD.cpp  RanokCADApp.cpp  RanokCADApp.h  RanokResources.cpp  RanokResources.h
RanokCAD/RanokCAD/Graphics/: BoundingBox.cpp  BoundingBox.h  FboWidget.cpp  FboWidget.h  ImGuiWidget.h  RayMarchWidget.cpp  RayMarchWidget.h  TextEditorWidget.cpp  TextEditorWidget.h
RanokCAD/RanokCAD/Modules/: DevelopmentModule.cpp  DevelopmentModule.h  IModule.cpp  IModule.h
RanokCAD/RanokCAD/Modules/Development/: DevelopmentModule.cpp  DevelopmentModule.h  ModelTree.cpp  ModelTree.h
RanokCAD/RanokCAD/Modules/Development/Model/: Assembly.cpp  Assembly.h  AssemblyCodeGenerator.cpp  AssemblyCodeGenerator.h  AssemblyPart.cpp  AssemblyPart.h  AssemblyShaderCode.h  Model.cpp  Model.h  ModelBase.h  ModelDetailsView.cpp  ModelDetailsView.h  ModelItem.cpp  ModelItem.h  StandardModels.cpp  StandardModels.h
RanokCAD/RanokCAD/Utils/: ClassDefines.h  DenseTree.h  GuiTree.h  ImGuiWidgets.cpp  ImGuiWidgets.h
RanokCAD/Source/: RanokCADApp.cpp  RanokCADApp.h  RanokResources.h
RanokCAD/Source/Graphics/: FboWidget.cpp  FboWidget.h  ImGuiWidget.h  RayMarchWidget.cpp  RayMarchWidget.h  TextEditorWidget.cpp  TextEditorWidget.h
RanokCAD/Source/Modules/: DevelopmentModule.cpp  DevelopmentModule.h  IModule.cpp  IModule.h
RanokCAD/Templates/: RayMarch.glsl.templ
RanokCADWebUI/: RanodCADWebUI.cpp  RanodCADWebUI.vcxproj.filters  RanokCADWebUI.vcxproj  RanokWebUIApp.cpp  RanokWebUIApp.h  htmlResources.json
RanokCADWebUI/Html/: index.html
RanokLang/: CMakeLists.txt  RanokLang.vcxproj  RanokLang.vcxproj.filters
RanokLang/RanokLang/: ActionNode.cpp  ActionNode.h  ActionTree.cpp  ActionTree.h  HardcodedConstructions.h  Parser.cpp  Parser.h  Token.h
RanokLang/RanokLang/Generators/: IGenerator.cpp  IGenerator.h  JsonGenerator.cpp  JsonGenerator.h  MultiObjectShaderGenerator.cpp  MultiObjectShaderGenerator.h  OpenclGenerator.cpp  ShaderGenerator.cpp
RanokLang/Source/: ActionNode.h  ActionTree.cpp  ActionTree.h  HardcodedConstructions.cpp  Lexer.cpp  Lexer.h  Parser.cpp
RanokLang/Source/Generators/: IGenerator.cpp  IGenerator.h  MultiObjectShaderGenerator.cpp  MultiObjectShaderGenerator.h  OpenclGenerator.cpp  OpenclGenerator.h  ShaderGenerator.cpp  ShaderGenerator.h
RanokLang/Templates/: Shader.tmpl
ResourceManager/: CMakeLists.txt  ResourceManager.vcxproj  ResourceManager.vcxproj.filters
ResourceManager/ResourceManager/: FileUtils.cpp  FileUtils.h  ResourceManager.cpp  ResourceManager.h
ResourceManager/ResourceManager/Resources/: JsonResource.cpp  JsonResource.h  Resource.cpp  ResourceDesc.cpp  ResourceDesc.h  TextResource.cpp  TextResource.h
ResourceManager/Source/Resources/: JsonResource.h  Resource.h
